# home-automation-firmwares

./: .gitignore  .gitmodules  set_credendials.sh
LedStripLight/: CommandHandler.h  LedStripLight.ino
LedStripLight2/: LedMqtt.h  LedStripLight2.ino  Logger.h  OtaUpdater.h
NvmProgrammer/: NvmProgrammer.ino
OtaUpdate/: CMakeLists.txt  README.md  gen_arduino_library.py  gen_ota_firmware.py
OtaUpdate/home_assistant/: credentials_STUB.py  upload_firmwares.py
OtaUpdate/home_assistant/automation/: OTA_send_latest_over_MQTT.yml
OtaUpdate/include/: OtaImageFormat.h  OtaPublicKey.h
OtaUpdate/keys/: public_key.pem
OtaUpdate/src/: create_der_from_pem_key.c  create_ota_image.c  sha256.c  sha256.h  sign_rsa2048.c  sign_rsa2048.h
RadiatorController/: Credentials_STUB.h  OtaUpdater.h  README.txt  RadiatorController.ino  RadiatorMqtt.h
tools/: credentials_STUB.env  mqtt_logger.py
